--- a/connect.yaml
+++ b/connect.yaml
@@ -74,7 +74,7 @@ deployAs:
     applicationType: merchant-center-custom-application
     configuration:
       standardConfiguration:
-        - key: APPLICATION_ID
+        - key: CUSTOM_APPLICATION_ID
           description: The Custom Application ID
           required: true
         - key: CLOUD_IDENTIFIER
